CCD-5867 upgrade to ES 9.2.4 and code improvements